--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "server.js",
   "scripts": {
     "start": "node server.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Skipping tests\""
   },
   "keywords": ["express", "sqlite3", "api", "cloudpix"],
   "author": "Your Name",
