Refactor Azure workflow for cloudpix-backend

--- a/.github/workflows/master_cloudpix-backend.yml
+++ b/.github/workflows/master_cloudpix-backend.yml
@@ -23,7 +23,7 @@ jobs:
         with:
           node-version: '22.x'
 
-      - name: npm install, build, and test
+      - name: npm install, build
         run: |
           npm install
           npm run build --if-present
@@ -62,4 +62,5 @@ jobs:
           app-name: 'cloudpix-backend'
           slot-name: 'Production'
           package: .
+
           
